--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<title>网页标题</title>	    
+		<title>my love ❤️</title>	    
         <link type="text/css" rel="stylesheet" href="./file/default.css">
 		<script type="text/javascript" src="./file/jquery.min.js"></script>
 		<script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -23,27 +23,27 @@
             <!-- </audio> -->
             <div id="wrap">
                 <div id="text">
-                    <div id="code"> <font color="#FF0000"> <span class="say">称呼</span><br>
-                      <span class="say">第一行</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>             
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">无情的占位符</span><br>
-                      <span class="say">最后一行</span><br>
-                      <span class="say"><span class="space"></span>--落款</span> </font>
+                    <div id="code"> <font color="#FF0000"> <span class="say">Haii</span><br>
+                      <span class="say">Vika</span><br>
+                      <span class="say">Sayangku</span><br>
+                      <span class="say">Cintaku</span><br>             
+                      <span class="say">Manisku</span><br>
+                      <span class="say">Hatiku</span><br>
+                      <span class="say">Jantungku</span><br>
+                      <span class="say">Nafasku</span><br>
+                      <span class="say">Separuh</span><br>
+                      <span class="say">Hidupku</span><br>
+                      <span class="say">duniaku</span><br>
+                      <span class="say">Love you sayang!</span><br>
+                      <span class="say"><span class="space"></span>--ur bf</span> </font>
                           <br />
                           <br />
                       </p>
                     </div>
                   </div>
                 <div id="clock-box">
-                    <span class="STYLE1"></span><font color="#33CC00">亲爱的，我喜欢你</font>
-<span class="STYLE1">已经是……</span>
+                    <span class="STYLE1"></span><font color="#33CC00">Sayang，aku suka sama kamu</font>
+<span class="STYLE1">udah..</span>
                   <div id="clock"></div>
               </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
